<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">酷易点</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="no_chat">暂时没有新消息</string>
    <string name="no_request">暂时没有人对您怦然心动</string>
    <string name="text_ack_msg">已读</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="prompt">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="sharetext">分享到</string>
    <string name="version_name">当前版本：v-</string>
    <string name="can_not_find_version_name">获取版本号失败</string>
    <string name="title_activity_login">登录</string>
    <string name="name">名字</string>
    <string name="school">学校</string>
    <string name="phone">手机号</string>
    <string name="my_integral_text">我的积分</string>
    <string name="my_all_integral_text">我全部的积分</string>
    <string name="modification_person_info_text">修改个人信息</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_other_sign_in">其他方式登录</string>
    <string name="login_ing">正在登录，请稍后...</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">手机号码格式不对</string>
    <string name="error_pattern_password">密码长度在6~18之间，只能包含字符、数字</string>
    <string name="error_field_required">此处必填</string>
    <string name="error_field_unregister">该手机号未注册</string>
    <string name="error_field_conform_pass">两次输入的密码不一致</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_phone_info">我们会向您发送一次性短消息，来验证您的电话号码</string>

    <!-- 注册 -->
    <string name="choose_gender_error">请选择性别</string>
    <string name="error_phone">手机号码格式不对</string>
    <string name="register_account_info">注册即表示我已同意《用户协议》</string>
    <string name="no_reg_phone">该手机号码没有被注册</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="reg_now">立即注册>></string>
    <string name="login_now">您尚未登录，是否去登录？</string>

</resources>