<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        android:gravity="center_horizontal"
        android:isScrollContainer="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:paddingTop="80dp"
                android:src="@drawable/kuyidian_logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical"
            android:padding="@dimen/day_recommend_dot_space" >

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_height"
                android:background="@drawable/shape_login_radius"
                android:drawableLeft="@drawable/login_phone_img"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingLeft="10.0dip"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/day_recommend_user_font" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_login_radius"
                android:drawableLeft="@drawable/login_password_img"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="10.0dip"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/day_recommend_user_font" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_height"
                android:layout_below="@+id/phone"
                android:layout_marginTop="20dp"
                android:background="@drawable/sel_login_btn_bg"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="10dp" >

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="13.0sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/reg_now"
                android:textColor="@color/white"
                android:textSize="13.0sp" />
        </RelativeLayout>

        <!-- 第三方登录 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/day_recommend_dot_space" >

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/action_other_sign_in"
                android:textColor="#999" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv"
                android:background="#999" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv"
                android:background="#999" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView
                android:id="@+id/loginwechat"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:src="@drawable/sel_login_wechat" />
        </LinearLayout>

        <!-- Login progress -->

        <LinearLayout
            android:id="@+id/login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/login_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/login_ing"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>