<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/left_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/person_info_title_background"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/sideslip_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/sideslip_btn_white_img" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:src="@drawable/kuyidian_logo" />

        <ImageView
            android:id="@+id/person_info_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/person_info_white_img" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/modification_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/person_info_head_img" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/person_info_shape2" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/person_info_name_img" />

        <EditText
            android:id="@+id/modification_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/person_info_shape" >

        <EditText
            android:id="@+id/modification_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/school"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/person_info_shape" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/person_info_phone_img" />

        <EditText
            android:id="@+id/modification_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/sure_modification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/person_info_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ok"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancel_modification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/person_info_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textSize="20sp" />

</LinearLayout>