<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/left_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/person_info_title_background"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/sideslip_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/sideslip_btn_white_img" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:src="@drawable/kuyidian_logo" />

        <ImageView
            android:id="@+id/person_info_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/person_info_white_img" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/person_info_integral_background" />

        <TextView
            android:id="@+id/my_reality_integral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="159"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_reality_integral"
            android:layout_centerHorizontal="true"
            android:text="@string/my_integral_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_reality_integral"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/my_all_integral_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/my_all_integral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_reality_integral"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="698"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/person_info_shape2" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/person_info_name_img" />

        <TextView
            android:id="@+id/person_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="刘云"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/person_info_shape" >

        <TextView
            android:id="@+id/person_info_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="厦门大学"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/person_info_shape" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/person_info_collect_img" />

        <TextView
            android:id="@+id/person_info_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="32"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/person_info_shape" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/person_info_phone_img" />

        <TextView
            android:id="@+id/person_info_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="13649573958"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/modification_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/person_info_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/modification_person_info_text"
        android:textSize="20sp" />

</LinearLayout>